--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
     "express": "~4.13.4",
     "express-jwt": "^3.3.0",
     "morgan": "~1.7.0"
+  },
+  "scripts": {
+  "build": "babel client/app/jsx -d ./client/app/js"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13"
   }
 }
