--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "~4.13.4",
     "express-jwt": "^3.3.0",
     "mongoose": "^4.4.14",
+    "mongoose-relationship": "^0.1.5",
     "morgan": "~1.7.0"
   },
   "devDependencies": {
