--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "description": "> MERN stack, Competitive Coding Challenge App",
   "main": "index.js",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
   "scripts": {
-    "build": "babel client/app/jsx -d ./client/app/js"
+    "watch": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -26,11 +33,16 @@
     "express-jwt": "^3.3.0",
     "mongoose": "^4.4.14",
     "mongoose-relationship": "^0.1.5",
-    "morgan": "~1.7.0"
+    "morgan": "~1.7.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-router": "^2.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13"
+    "babel-preset-react": "^6.3.13",
+    "webpack": "^1.13.0"
   }
 }
