--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "morgan": "~1.7.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
