--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "socket.io": "^1.4.6"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
