--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/CodeToads/codetoads#readme",
   "dependencies": {
+    "axios": "^0.11.0",
     "body-parser": "~1.15.0",
     "cookie-parser": "~1.4.1",
     "cors": "^2.7.1",
@@ -37,7 +38,10 @@
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
+    "redux": "^3.5.2",
+    "redux-promise": "^0.5.3",
     "request": "^2.72.0",
     "socket.io": "^1.4.6"
   },
