--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "watch": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "mocha -R spec spec/server.js "
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "express-jwt": "^3.3.0",
+    "mocha": "^2.4.5",
     "mongoose": "^4.4.14",
     "mongoose-relationship": "^0.1.5",
     "morgan": "~1.7.0",
@@ -43,7 +45,8 @@
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
     "request": "^2.72.0",
-    "socket.io": "^1.4.6"
+    "socket.io": "^1.4.6",
+    "supertest": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
