--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "express-jwt": "^3.3.0",
-    "mongoose": "^4.4.14",
-    "mongoose-relationship": "^0.1.5",
     "morgan": "~1.7.0",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
@@ -43,7 +41,9 @@
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
     "request": "^2.72.0",
-    "socket.io": "^1.4.6"
+    "rethinkdb": "^2.3.1",
+    "socket.io": "^1.4.6",
+    "thinky": "^2.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
