--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "request": "^2.72.0",
     "rethinkdb": "^2.3.1",
     "socket.io": "^1.4.6",
-    "thinky": "^2.3.2"
+    "thinky": "^2.3.2",
     "supertest": "^1.2.0"
   },
   "devDependencies": {
