--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     ]
   },
   "scripts": {
+    "start": "nodemon ./server/index.js",
     "watch": "webpack --watch",
     "build": "webpack",
     "test": "mocha -R spec spec/server.js "
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/CodeToads/codetoads#readme",
   "dependencies": {
+    "auth0-lock": "^9.1.3",
     "axios": "^0.11.0",
     "body-parser": "~1.15.0",
     "cookie-parser": "~1.4.1",
@@ -34,6 +36,7 @@
     "express": "~4.13.4",
     "express-jwt": "^3.3.0",
     "mocha": "^2.4.5",
+    "json-loader": "^0.5.4",
     "morgan": "~1.7.0",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
@@ -42,17 +45,21 @@
     "react-router": "^2.4.0",
     "redux": "^3.5.2",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.0.1",
     "request": "^2.72.0",
     "rethinkdb": "^2.3.1",
     "socket.io": "^1.4.6",
     "thinky": "^2.3.2",
     "supertest": "^1.2.0"
+    "transform-loader": "^0.2.3",
+    "webpack": "^1.13.0"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "webpack": "^1.13.0"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
