--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "rethinkdb": "^2.3.1",
     "socket.io": "^1.4.6",
     "thinky": "^2.3.2",
-    "supertest": "^1.2.0"
+    "supertest": "^1.2.0",
     "transform-loader": "^0.2.3",
     "webpack": "^1.13.0"
   },
