--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "auth0-lock": "^9.1.3",
     "axios": "^0.11.0",
     "body-parser": "~1.15.0",
+    "classnames": "^2.2.5",
     "cookie-parser": "~1.4.1",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "express-jwt": "^3.3.0",
-    "mocha": "^2.4.5",
     "json-loader": "^0.5.4",
+    "mocha": "^2.4.5",
     "morgan": "~1.7.0",
     "react": "^15.0.2",
     "react-bootstrap": "^0.29.3",
@@ -49,8 +50,8 @@
     "request": "^2.72.0",
     "rethinkdb": "^2.3.1",
     "socket.io": "^1.4.6",
-    "thinky": "^2.3.2",
     "supertest": "^1.2.0",
+    "thinky": "^2.3.2",
     "transform-loader": "^0.2.3",
     "webpack": "^1.13.0"
   },
