--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mocha": "^2.4.5",
     "morgan": "~1.7.0",
     "react": "^15.0.2",
+    "react-ace": "^3.4.1",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
