--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "auth0-lock": "^9.1.3",
     "axios": "^0.11.0",
     "body-parser": "~1.15.0",
+    "chai": "^3.5.0",
     "classnames": "^2.2.5",
     "cookie-parser": "~1.4.1",
     "cors": "^2.7.1",
