--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-ace": "^3.4.1",
     "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.2",
+    "react-markdown": "^2.2.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "redux": "^3.5.2",
