--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "enzyme": "^2.3.0",
     "react-addons-test-utils": "^15.0.2",
     "react-dom": "^15.0.2",
+    "sinon": "^1.17.4",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   }
