(test) Add jsdom and Typing tests
Add realistic browser environment for SweetAlert using jsdom

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "test": "mocha -R spec spec/server.js",
-    "front": "mocha --compilers js:babel-register -R spec spec/client/spec.jsx"
+    "front": "mocha --compilers js:babel-register spec/client/browser.js -R spec spec/client/spec.jsx"
   },
   "repository": {
     "type": "git",
